--- a/css/style.css
+++ b/css/style.css
@@ -227,6 +227,113 @@ img:hover {
     100% { border-color: #cfc1de; }
 }
 
+/* desktop view */
 @media only screen and (min-width: 1024px) {
-    
+    /* changing recipes layout */
+    .recipe-info {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto auto auto;
+        gap: 20px;
+        margin: 10px;
+    }
+
+    .main-image {
+        grid-column: 2;
+        grid-row: 1 / span 3;
+    }
+
+    .main-image img {
+        width: 100%;
+        height: auto;
+    }
+
+    /* unique addition - placing everything but image on right side of grid */
+    .recipe-content {
+        grid-column: 1;
+        grid-row: 1 / span;
+    }
+
+    /* changing pets layout */
+    .pet {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        grid-template-rows: auto auto auto;
+        gap: 30px;
+        margin-bottom: 50px;
+        padding-bottom: 20px;
+        margin-top: 0px;
+        background-color: #2f035e;
+        color: #cfc1de;
+    }
+
+    .pet h3 {
+        grid-column: 2;
+        grid-row: 1;
+    }
+
+    .pet-description .main-image img {
+        height: 300px;
+        width: 300px;
+        margin-left: 100px;
+    }
+
+    .pet-description .main-image .ash-img {
+        height: 300px;
+        width: 300px;
+        margin-left: 100px;
+    }
+
+    .pet-description {
+        margin-bottom: 20px;
+    }
+
+    .pet-description .text-content {
+        align-self: center;
+        margin-left: 20px;
+    }
+
+    .pet .grid-discussion {
+        grid-column: 2;
+        grid-row: 2;
+    }
+
+    .pet .likes-container {
+        grid-column: 1;
+        grid-row: 2;
+        width: 50%;
+        background-color: #cfc1de;
+        color: #2f035e;
+    }
+
+    /* changing travel layout */
+
+    .location-info {
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        margin-bottom: 10px;
+    }
+
+    .location-info .main-image img {
+        width: 100%;
+        height: 80%;
+    }
+
+    .location-info .location-content {
+        display: block;
+        background-color: #cfc1de;
+        color: #2f035e;
+    }
+
+    .gallery {
+        background-color: #2f035e;
+        color: #cfc1de;
+        margin-top: 20px;
+        margin-bottom: 80px;
+    }
+
+    .gallery .grid-discussion img {
+        height: 80%;
+        width: 90%;
+    }
 }
